website/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

/* To get the origin config: current value + 0x17 */
:root {
  --ifm-color-primary: #727272;
  --ifm-color-primary-dark: #686868;
  --ifm-color-primary-darker: #626262;
  --ifm-color-primary-darkest: #515252;
  --ifm-color-primary-light: #95999D;
  --ifm-color-primary-lighter: #ACB0B5;
  --ifm-color-primary-lightest: #BFC4CA;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */

/* To get the origin config: current value + 0x7de */
[data-theme='dark'] {
  --ifm-color-primary: #25bac2;
  --ifm-color-primary-dark: #21a7b2;
  --ifm-color-primary-darker: #1f9daa;
  --ifm-color-primary-darkest: #1a8092;
  --ifm-color-primary-light: #29cdd2;
  --ifm-color-primary-lighter: #32d0d6;
  --ifm-color-primary-lightest: #4fd5e1;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

#tryinsomthin{
  padding-top: 50px;
  padding-bottom: 50px;
}

.greenbutton{
  background-color: #374BBB;
}

.format{
  text-align: left;
}

